Allow Java 8 again